--- a/vue-compostion-api-noteballs/package.json
+++ b/vue-compostion-api-noteballs/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bulma": "^1.0.2",
+    "bulma": "0.9.3",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
